--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,17 +10,54 @@
     <title>XMeme</title>
 </head>
 
-<body>
+<body id="particle">
+    <h1 class="title">XMeme</h1>
+    <p><br></p>
+    <div class="containerD">
+        <h1>Post A Meme</h1>
 
-    <h1 class="title" id="Hello"></h1>
+        <form class="form" action="http://127.0.0.1:8000/memes/" id="formElem" method="post">
 
-    <div id="app" class="container">
+            <fieldset class="form-fieldset ui-input __first">
+                <input name="name" type="text" id="username" tabindex="0" autocomplete="off" />
+                <label for="username">
+                    <span data-text="Username">name</span>
+                </label>
+            </fieldset>
+
+            <fieldset class="form-fieldset ui-input __second">
+                <input name="url" type="url" id="ImageUrl" tabindex="0" autocomplete="off" />
+                <label for="ImageUrl">
+                    <span data-text="Meme Url">Url</span>
+                </label>
+            </fieldset>
+
+            <fieldset class="form-fieldset ui-input __third">
+                <input name="caption" type="text" id="Caption" autocomplete="off" />
+                <label for="Caption">
+                    <span data-text="Caption FOR Meme">Caption</span>
+                </label>
+            </fieldset>
+
+            <div class="form-footer">
+                <button class="btn" type="submit">Submit</button>
+
+            </div>
+        </form>
     </div>
+    <div>
+        <p><br><br></p>
+        <h1 class="title" id="Hello"></h1>
+        <div id="app" class="container">
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script type="text/javascript" src="scripts/particles.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
+
 </body>
 
 </html>
