--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="icon" type="image/png" href="icon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Raleway:500.700">
     <title>XMeme</title>
 </head>
@@ -16,7 +17,7 @@
     <div class="containerD">
         <h1>Post A Meme</h1>
 
-        <form class="form" action="http://127.0.0.1:8000/memes/" id="formElem" method="post">
+        <form class="form" action="https://xmeme-raj.herokuapp.com/memes/" id="formElem" method="post">
 
             <fieldset class="form-fieldset ui-input __first">
                 <input name="name" type="text" id="username" tabindex="0" autocomplete="off" />
