frontend loader added

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body id="particle">
+    
+
     <h1 class="title">XMeme</h1>
     <p><br></p>
     <div class="containerD">
@@ -46,10 +48,13 @@
             </div>
         </form>
     </div>
-    <div>
+    <div class="viewMeme">
         <p><br><br></p>
-        <h1 class="title" id="Hello"></h1>
+        <h1 class="title" id="Hello"></h1>   
         <div id="app" class="container">
+                <div class="loading">
+                    <span>Loading Memes...</span>
+                </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
